// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
.c1 {
  font-size: 12px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  white-space: nowrap;
}

<li
  className="c0"
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
>
  <a
    className="c1"
    color=""
    fontSize="12px"
    href="/"
    itemProp="item"
    rel="_self"
    target=""
  >
    Home
  </a>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
.c0 {
  white-space: nowrap;
}

.c1 {
  font-size: 12px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

<li
  className="c0"
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
>
  <span
    className="c1"
    fontSize="12px"
    href={null}
    itemProp="item"
  >
    Home
  </span>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;
